# serializer version: 1
# name: test_work_item_list_row_list[ag]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': 'Tate Inc',
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '80fe47bf-9ed6-415c-af91-9c210b81977b',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'special-id': '2025-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': '80fe47bf-9ed6-415c-af91-9c210b81977b',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Tate Inc',
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'owner-car-kitchen',
              'no-placeholder',
            ]),
            'route': 'foo.bar.baz',
          }),
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'bb8ccb4e-15ae-4037-bad7-f7b310280c23',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'special-id': '2025-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'from-task',
          'unread': True,
        }),
        'id': 'bb8ccb4e-15ae-4037-bad7-f7b310280c23',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Tate Inc',
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'b06f8e43-9fd1-4d2c-bb5c-366adc3f7a4a',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'special-id': '2025-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'assigned',
          'unread': True,
        }),
        'id': 'b06f8e43-9fd1-4d2c-bb5c-366adc3f7a4a',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'e435b1ab-c539-4184-bdbf-2fa67d3f48bb',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Jasmin Hein',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': '2025-01-01',
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': 'e435b1ab-c539-4184-bdbf-2fa67d3f48bb',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Tate Inc',
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '0974bea4-741d-4655-b018-45564c735fce',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'special-id': '2025-1',
          'status': 'completed',
          'target-deadline-date': '2025-01-02',
          'task': 'completed',
          'unread': True,
        }),
        'id': '0974bea4-741d-4655-b018-45564c735fce',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 5,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
# name: test_work_item_list_row_list[gr]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': 'Test AG',
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Einfamilienhaus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '7369d1b4-dc31-466b-8eb5-adb387939c30',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Chur',
          'special-id': '2023-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': '7369d1b4-dc31-466b-8eb5-adb387939c30',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Test AG',
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Einfamilienhaus',
          'direct-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'owner-car-kitchen',
              'no-placeholder',
            ]),
            'route': 'foo.bar.baz',
          }),
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'a98d35fc-c5a6-4cfd-8262-caf205d14da5',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Chur',
          'special-id': '2023-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'from-task',
          'unread': True,
        }),
        'id': 'a98d35fc-c5a6-4cfd-8262-caf205d14da5',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Test AG',
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Einfamilienhaus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '898139ce-ac32-4af1-b5e6-87f940795987',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Chur',
          'special-id': '2023-1',
          'status': 'ready',
          'target-deadline-date': '2025-01-02',
          'task': 'assigned',
          'unread': True,
        }),
        'id': '898139ce-ac32-4af1-b5e6-87f940795987',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'f3e7a4b4-da52-4fd6-a7ac-606543938447',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Edeltraut Hartmann MBA.',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': '2025-01-01',
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': 'f3e7a4b4-da52-4fd6-a7ac-606543938447',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Test AG',
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Einfamilienhaus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '149d3df0-25dd-4860-8097-723c40f5b623',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': 'Chur',
          'special-id': '2023-1',
          'status': 'completed',
          'target-deadline-date': '2025-01-02',
          'task': 'completed',
          'unread': True,
        }),
        'id': '149d3df0-25dd-4860-8097-723c40f5b623',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 5,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
# name: test_work_item_list_row_list[so]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'd829f577-5954-4ccc-8f95-c204ecbc1cba',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'special-id': '2601-2024-1',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': 'd829f577-5954-4ccc-8f95-c204ecbc1cba',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'owner-car-kitchen',
              'no-placeholder',
            ]),
            'route': 'foo.bar.baz',
          }),
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'c6b48b0a-708e-4cc8-aa88-84f896676c35',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'special-id': '2601-2024-1',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'from-task',
          'unread': True,
        }),
        'id': 'c6b48b0a-708e-4cc8-aa88-84f896676c35',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'e45e179c-d728-4806-8551-164aa2601c51',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'special-id': '2601-2024-1',
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'assigned',
          'unread': True,
        }),
        'id': 'e45e179c-d728-4806-8551-164aa2601c51',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-06T01:00:00+01:00',
          'description': None,
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '7f048dbe-7e96-4e6a-b1fe-73163163a369',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Mareike Flantz',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': None,
          'special-id': None,
          'status': 'ready',
          'target-deadline-date': None,
          'task': 'target-deadline-date',
          'unread': True,
        }),
        'id': '7f048dbe-7e96-4e6a-b1fe-73163163a369',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-07T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'ea591a73-c3e3-4640-8fa3-fccb1da90a3c',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'special-id': '2601-2024-1',
          'status': 'completed',
          'target-deadline-date': None,
          'task': 'completed',
          'unread': True,
        }),
        'id': 'ea591a73-c3e3-4640-8fa3-fccb1da90a3c',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 5,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
